20251003 v0.0.19 More Horizontal Scroll Fixes

--- a/public/style.css
+++ b/public/style.css
@@ -1082,18 +1082,23 @@ li {
     color:var(--text-color);
     font-weight: 600;
     text-align: left;
+    text-wrap: auto;
+    padding: 0 10px 0 0;
 }
 
 .col-yards {
     color:var(--text-color);
     text-align: center;
     font-weight: 600;
-}
+    text-wrap: auto;
+    padding: 0 10px 0 10px;}
 
 .col-enforced {
     color:var(--text-color);
     text-align: center;
     font-weight: 400;
+    text-wrap: auto;
+    padding: 0 10px 0 10px;
 }
 
 /* Effect column containing both text and the tick */
@@ -1103,6 +1108,8 @@ li {
     justify-content: space-between;
     align-items: center;
     font-weight: 400;
+    text-wrap: auto;
+    padding: 0 10px 0 10px;
 }
 
 .effect-tick {
@@ -1119,7 +1126,7 @@ li {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0); /* Dark overlay */
+    background-color: rgba(255, 255, 255, 1); /* Dark overlay */
     z-index: 1000; /* Ensure it is above all other content */
     display: flex;
     justify-content: center;
@@ -1133,7 +1140,7 @@ li {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); */
     width: 100%;
     max-width: 700px; /* Wider to support the four columns */
     margin: auto;
